--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1 class="logo">Discover Nature</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home1</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Contact</a></li>
