--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
             <h1 class="logo">Discover Nature</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home1</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#" class="nav_item">Find Us</a>
+                    <div class="nav_content">
+                    <div class="nav_sub">
+                    <ul>
+                        <li><a href="#">Face Book</a></li>
+                        <li><a href="#">YouTube</a></li>
+                        <li><a href="#">Twitter</a></li>
+                    </ul>
+                     </div>
+                    </div>
+                    </li>
                 </ul>
             </nav>
         </div>
