--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css"> </head>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Roboto|Source+Sans+Pro" rel="stylesheet">
 <body>
-    <header>
+<header>
         <div class="container">
             <h1 class="logo">Discover Nature</h1>
             <nav>
@@ -13,7 +13,17 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#" class="nav_item">Find Us</a>
+                    <div class="nav_content">
+                    <div class="nav_sub">
+                    <ul>
+                        <li><a href="#">FaceBook</a></li>
+                        <li><a href="#">YouTube</a></li>
+                        <li><a href="#">Twitter</a></li>
+                    </ul>
+                     </div>
+                    </div>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -32,6 +42,24 @@
 			<p>Nature, in the broadest sense, is the natural, physical, or material world or universe. "Nature" can refer to the phenomena of the physical world, and also to life in general. The study of nature is a large part of science.</p>
 			<a class="btn_more" href="about.html">Know More</a>
 		</div>
+		
+		<section class="gray">
+		    <section class="gray_a">
+                <h2>Our Services Include</h2>
+                <ul class="box_links">
+      <li class="boxLinksIndex-item"><a href=""><img src="img/elements.jpg">
+    <h3 class="arw01">Discover the difference between nature elements</h3>
+    </a></li>
+        <li class="boxLinksIndex-item"><a href=""><img src="img/ocean.jpg">
+    <h3 class="arw01">Discover the ocean elements and sea animals</h3>
+    </a></li>
+        <li class="boxLinksIndex-item"><a href=""><img src="img/birds.jpg">
+    <h3 class="arw01">Discover birds and the vast majority of bird species </h3>
+    </a></li>
+</ul>
+		    </section>
+		    
+		</section>
 
 
 
