new hings added

--- a/about.html
+++ b/about.html
@@ -41,19 +41,31 @@
     
     <section class="gray">
         <section class="gray_a">
-            <h2>Our Services Include</h2>
+            <h2>Our Mission Includes</h2>
             <ul class="box_links">
                 <li class="boxLinksIndex-item">
-                    <a href=""><img src="img/elements.jpg">
-                        <h3 class="arw01">Discover the difference between nature elements</h3> </a>
+                    <img src="img/elements.jpg">
+                        <h3 class="arw01">Discovering the difference between nature elements</h3> 
                 </li>
                 <li class="boxLinksIndex-item">
-                    <a href=""><img src="img/ocean.jpg">
-                        <h3 class="arw01">Discover the ocean elements and sea animals</h3> </a>
+                    <img src="img/ocean.jpg">
+                        <h3 class="arw01">Discovering the ocean elements and sea animals</h3> 
                 </li>
                 <li class="boxLinksIndex-item">
-                    <a href=""><img src="img/birds.jpg">
-                        <h3 class="arw01">Discover birds and the vast majority of bird species </h3> </a>
+                    <img src="img/birds.jpg">
+                        <h3 class="arw01">Discovering birds and the vast majority of bird species </h3> 
+                </li>
+                              <li class="boxLinksIndex-item">
+                    <img src="img/volcano.jpg">
+                        <h3 class="arw01">Discovering how are volcanoes formed</h3> 
+                </li>
+                <li class="boxLinksIndex-item">
+                    <img src="img/river.jpg">
+                        <h3 class="arw01">Discovering how rivers change the landscape</h3> 
+                </li>
+                <li class="boxLinksIndex-item">
+                    <img src="img/desert.jpg">
+                        <h3 class="arw01">Discovering how desert plants and animals survive</h3> 
                 </li>
             </ul>
         </section>
