--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Pricing</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="#" class="nav_item">Find Us</a>
                     <div class="nav_content">
                     <div class="nav_sub">
@@ -88,17 +88,17 @@
             </div>
         </div>
     </section>
-    <section id="boxes">
-        <div class="container">
-            <div class="box"> <img src="img/tree.png">
+    <section id="boxes_b">
+        <div class="container_b">
+            <div class="box_b"> <img src="img/tree.png">
                 <h3>Tree</h3>
                 <p>A tree typically has many secondary branches supported clear of the ground by the trunk. This trunk typically contains woody tissue for strength, and vascular tissue to carry materials from one part of the tree to another.</p>
             </div>
-            <div class="box"> <img src="img/flower.png">
+            <div class="box_b"> <img src="img/flower.png">
                 <h3>Flower</h3>
                 <p>A flower, sometimes known as a bloom or blossom, is the reproductive structure found in plants that are floral (plants of the division Magnoliophyta, also called angiosperms). The biological function of a flower is to effect reproduction.</p>
             </div>
-            <div class="box"> <img src="img/mountain.png">
+            <div class="box_b"> <img src="img/mountain.png">
                 <h3>Mountain</h3>
                 <p>A mountain is a large landform that stretches above the surrounding land in a limited area, usually in the form of a peak. A mountain is generally steeper than a hill. Mountains are formed through tectonic forces or volcanism. These forces can locally raise the surface of the earth.</p>
             </div>
