--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Pricing</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="#" class="nav_item">Find Us</a>
                         <div class="nav_content">
                             <div class="nav_sub">
