--- a/about.html
+++ b/about.html
@@ -35,11 +35,11 @@
     </div>
     <div class="content_about">
         <h1>Discover Nature</h1>
-        <p>Nature, in the broadest sense, is the natural, physical, or material world or universe. "Nature" can refer to the phenomena of the physical world, and also to life in general. The study of nature is a large part of science.</p> <a class="btn_more" href="about.html">Know More</a> </div>
+        <p>Nature, in the broadest sense, is the natural, physical, or material world or universe. "Nature" can refer to the phenomena of the physical world, and also to life in general. The study of nature is a large part of science.</p> <a class="btn_more" href="#ourmission">Know More</a> </div>
    
     
     
-    <section class="gray">
+    <section class="gray" id="ourmission">
         <section class="gray_a">
             <h2>Our Mission Includes</h2>
             <ul class="box_links">
