--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     <footer>
         <p>Maher Al Ayoubi, Copyright &copy; 2017</p>
     </footer>
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
         $(function() {
   $('a[href*="#"]:not([href="#"])').click(function() {
