--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="box_b"> <img src="img/mountain.png">
                 <h3>Mountain</h3>
-                <p>A mountain is a large landform that stretches above the surrounding land in a limited area, usually in the form of a peak. A mountain is generally steeper than a hill. Mountains are formed through tectonic forces or volcanism. These forces can locally raise the surface of the earth.</p>
+                <p>A mountain is a large landform that stretches above the surrounding land in a limited area, usually in the form of a peak. A mountain is generally steeper than a hill. Mountains are formed through tectonic forces or volcanism.</p>
             </div>
         </div>
     </section>
